src/test/testData/AnnotatorTestData.java
<error descr="Class 'Test' is public, should be declared in a file named 'Test.java'">public class Test</error> {
    public static void main(String[] args) {
        System.out.println("simple:website");
        System.out.println("simple:key with spaces");
        System.out.println();
    }
}